# AutoScheduling

./: .gitignore  .gitmodules  Common.py  Data.py  Dockerfile  LICENSE  README.md  Untitled.ipynb  db.sqlite3  docker-compose.yml  docker-entrypoint.sh  gscript.py  manage.py  requirements.txt
Backend/: Data.py  Sample Data.csv  Schedule.py  sample.json
CATt/: settings.py  urls.py  wsgi.py
Parsers/: CSVParser.py  Common.py  InputJSON.json  OutputJSON.json  SampleData.csv  Schedule.py
schedule/: call_scheduler.py  config.py  data_exchange.py  data_process.py  ga.py  schedule_test.py
schedule/json/: schedule_data.json
scheduler_cpp/: CMakeLists.txt  main.cpp
scheduler_cpp/Algorithm/: Configuration.cpp  Configuration.h  Course.cpp  CourseClass.cpp  CourseClass.h  Professor.cpp  Room.cpp  Schedule.cpp  Schedule.h  StudentsGroup.cpp
site/: 11_temp_schedule_6  db.sqlite3  manage.py
site/CATt/: settings.py  urls.py
site/static/: Base.html  Base2.html  edit_schedule.html  history.html  index.html  login.html  register.html  schedule.html  sidebar-panel.html  upload_form.html  uploaded.html
site/static/css/: style.css  style_sidebar.css  (+1 more)
site/u_csv/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
site/user_profile/: models.py  urls.py  views.py
static/: Base.html  genSched.html  login.html  login2.html  print_csv.html  schedule.html  style.css  upload_form.html
static/css/: style.css
static/js/: upload_form.js
u_csv/: forms.py  models.py  urls.py  views.py
u_csv/Parser/: Common.py  Data.py  Parser.py
u_csv/migrations/: 0001_initial.py
(+3 files in other folders)
